# location-service/location/dto.go
@@ -15,15 +15,20 @@ type AddLocationReq struct {
 }
 
 type GetPageWithFilter struct {
-	ID        string
-	Title     string
-	BestTime  string
+	ID        *string
+	Title     *string
+	BestTime  *string
 	Page      int
 	Limit     int
 	SortBy    string
 	SortOrder string
 }
-
+type LocationPageResponse struct {
+	Id         string  `json:"id"               bson:"_id,omitempty"`
+	Title      string  `json:"title"            bson:"title"`
+	PictureUrl string  `json:"picture_url"      bson:"picture_url"`
+	Rating     float32 `json:"rating"           bson:"rating"`
+}
 type Comment struct {
 	Userid     int
 	UserName   string
